--- a/index.html
+++ b/index.html
@@ -4,27 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>library</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>📖My library</title>
 </head>
 <body>
-    <h1>My Library 📖</h1>
-    <hr>
-    <button type="button" class="add-button">+</button>
-    <div id="add-book-card" data-book-card>
-    <div class="book-layout" id="bookLayout"></div>
-        <form action="#" id="bookForm">
-            <h3>Add new book</h3>
-            <input type="text" id="bookTitle" placeholder="Title..." name="bookTitle" maxlength="60" required>
-            <input type="text" id="bookAuthor" placeholder="Author..." name="bookAuthor" required>
-            <input type="number" min="1" max="5000" id="pageCount" placeholder="Page Count..." name="pageCount" required>
-            <label for="readBook" id="readBook">Did you read it?</label><input type="checkbox" id="readBook" name="read" value="yes">
-            <button type="submit" class="submitBook">Add to Library</button>
-        </form>
+    <div class="header">
+        <h2>my library</h1>
+        <hr>    
     </div>
+    <button class="add-button">+</button>
+
+    <div class="overlay"></div>
+    <div class="book-shelf"></div>
+    
+    <section class="form-popup">
+        <div class="form-container">
+            <form class="book-form">
+                <p>New Book</p>
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" required><br>
+
+                <label for="author">Author:</label>
+                <input type="text" id="author" name="author" required><br>
+
+                <label for="pages"># of pages:</label>
+                <input type="number" id="pg-number" name="pg-number" required minlength="5000">
+
+                <label for="book-read">Have you read it?</label><br>
+                <select name="book-read" id="book-read">
+                    <option value="Yes">Yes</option>
+                    <option value="No">Not yet</option>
+                </select>
+                <button type="submit" id="submit-book">Submit</button>
+            </form>
+        </div>
+    </section>
 </body>
-<footer class="copyright">
-    <a></a>
-</footer>
 </html>
