--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 <body>
     <div class="header">
-        <h2>my library</h1>
-        <hr>    
+        <h2>my library</h1>  
     </div>
-    <button class="add-button">+</button>
+    <hr>  
+    <button type="submit" class="add-button" data-add-button>+</button>
 
-    <div class="overlay"></div>
-    <div class="book-shelf"></div>
+    <div class="overlay" data-overlay></div>
+    <div class="book-shelf" data-bookshelf></div>
     
     <section class="form-popup">
         <div class="form-container">
-            <form class="book-form">
+            <form class="book-form" data-book-form>
                 <p>New Book</p>
+                <button class="close" data-close-button>x</button>
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required><br>
 
@@ -29,14 +30,14 @@
                 <input type="text" id="author" name="author" required><br>
 
                 <label for="pages"># of pages:</label>
-                <input type="number" id="pg-number" name="pg-number" required minlength="5000">
+                <input type="number" id="pg-number" name="pg-count" required minlength="5000">
 
                 <label for="book-read">Have you read it?</label><br>
                 <select name="book-read" id="book-read">
                     <option value="Yes">Yes</option>
                     <option value="No">Not yet</option>
                 </select>
-                <button type="submit" id="submit-book">Submit</button>
+                <button type="submit" id="submit-book" data-submit-button>Submit</button>
             </form>
         </div>
     </section>
