fixed submit issue

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <section class="form-popup">
         <div class="form-container">
-            <form class="book-form" data-book-form novalidate>
+            <form class="book-form" data-book-form>
                 <p>New Book</p>
                 <button class="close" data-close-button>x</button>
                 <label for="title">Title:</label>
